Add AXHelper refactor
And
1. separate unrelated Features.
2. adding FixReadingHTML
3. adding several TODO's for remaining work